--- a/pallets/erc20/Cargo.toml
+++ b/pallets/erc20/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "pallet-template"
+name = "pallet-erc20"
 version = "4.0.0-dev"
-description = "FRAME pallet template for defining custom runtime logic."
+description = "FRAME pallet ERC20"
 authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
 homepage = "https://substrate.io"
 edition = "2021"
